# heatguard-ai-uzbekistan

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py
app/api/: main.py
app/core/: __init__.py  config.py  schemas.py
app/dashboard/: main.py
app/data/: cities.py
app/features/: risk.py
app/services/: geospatial.py  risk_service.py  weather.py
data/processed/: training_data.csv
data/sample/: README.md
docs/: METHODOLOGY.md
models/: best_model.joblib  metrics.json
scripts/: build_dataset.py  train.py
tests/: test_api.py  test_risk.py
